fix: search icon colors in dark mode & blog posts tiles swiping

--- a/components/common/input/input.module.scss
+++ b/components/common/input/input.module.scss
@@ -12,6 +12,10 @@
     width: 1.9rem;
     transform: translateY(-50%);
     opacity: 0.5;
+
+    path {
+      fill: var(--black-100);
+    }
   }
 
   .input {
